tests-e2e/tests/package_manager/snapshots/package_manager__watch__watch_workspace.snap
---
source: tests-e2e/tests/package_manager/watch.rs
---
Answering queries: see `iris watch query --help` or `iris skills get watch`
[TIME] Build succeeded in [DURATION]
          Loaded 2 inputs: Application, Library
