tests-e2e/tests/package_manager/snapshots/package_manager__watch__watch_workspace_v1.snap
---
source: tests-e2e/tests/package_manager/watch.rs
---
[TIME] 2 files changed: Application, Library
